--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: end -->
 
-The goal of ctima is to assess whether and how a specific continuous or categorical exposure affects the outcome of interest through one mediator using a two-way cross test (CT). The CT method allows to make inference for composite null hypotheses of no mediation effect, providing valid type I error control and thus optimizes statistical power. For more technical details, refer to Chen, C., Zhou, L., Song, P.X.K. (2025), "An Efficient Two-Way Cross Test for Mediation Effects with High Sensitivity to Weak Signals" arXiv preprint.
+The goal of `ctima` is to assess whether and how a specific continuous or categorical exposure affects the outcome of interest through one mediator using a two-way cross test (CT). The CT method allows to make inference for composite null hypotheses of no mediation effect, providing valid type I error control and thus optimizes statistical power. For more technical details, refer to Chen, C., Zhou, L., Song, P.X.K. (2025), "An Efficient Two-Way Cross Test for Mediation Effects with High Sensitivity to Weak Signals" arXiv preprint.
 
 ## Installation
 
@@ -34,7 +34,7 @@ devtools::install_github("canyi-chen/ctima")
 
 ## Example 1
 
-This is a single example that shows steps of using the cross test (CT) to test for the null hypothesis of no mediation effect under the linear structural equation models.
+This is an example that shows steps of using the cross test `abYlm.Mglm` to test for the null hypothesis of no mediation effect under the linear structural equation models.
 
 ``` {r}
 library(ctima)
@@ -66,7 +66,7 @@ ctYlm.Mglm(
 
 ## Example 2
 
-This example shows the use of abYlm.Mglm function for generalized linear model on the mediator. 
+This example shows the use of `abYlm.Mglm` function for generalized linear model on the mediator. 
 
 ```{r}
 library(ctima)
